test/sema/positive/let2.impala
fn f[A](a: A) -> A {
   let x:A = a;
   x
}
