test/sema/negative/movesema/init_through_owned_ptr.impala
fn f() -> () {
    let a: ~int;
    *a = 3;
}
